--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-skycons": "^0.8.8",
+    "skycons": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
